OSSM/1_34/must-gather.local.5081100147449331507/registry-redhat-io-openshift-serverless-1-svls-must-gather-rhel8-sha256-c7ea3d26e4220fcfde67b840b1cdb135bd9774ff84eb2e4673de81c9f3696d11/namespaces/openshift-serverless/route.openshift.io/routes.yaml
---
apiVersion: route.openshift.io/v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
      serving.knative.openshift.io/ownerName: knative-serving
      serving.knative.openshift.io/ownerNamespace: knative-serving
    creationTimestamp: "2025-01-09T14:58:14Z"
    managedFields:
    - apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:serving.knative.openshift.io/ownerName: {}
            f:serving.knative.openshift.io/ownerNamespace: {}
        f:spec:
          f:port:
            .: {}
            f:targetPort: {}
          f:tls:
            .: {}
            f:insecureEdgeTerminationPolicy: {}
            f:termination: {}
          f:to:
            f:kind: {}
            f:name: {}
            f:weight: {}
          f:wildcardPolicy: {}
      manager: knative-operator
      operation: Update
      time: "2025-01-09T14:58:14Z"
    - apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:ingress: {}
      manager: openshift-router
      operation: Update
      subresource: status
      time: "2025-01-09T14:58:14Z"
    name: kn
    namespace: openshift-serverless
    resourceVersion: "51618"
    uid: e3be4f2e-0212-47c3-a55e-8829420cb8df
  spec:
    host: kn-openshift-serverless.apps.ci-ln-6bt60xt-76ef8.aws-2.ci.openshift.org
    port:
      targetPort: http-cli
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: edge
    to:
      kind: Service
      name: knative-openshift-metrics-3
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2025-01-09T14:58:14Z"
        status: "True"
        type: Admitted
      host: kn-openshift-serverless.apps.ci-ln-6bt60xt-76ef8.aws-2.ci.openshift.org
      routerCanonicalHostname: router-default.apps.ci-ln-6bt60xt-76ef8.aws-2.ci.openshift.org
      routerName: default
      wildcardPolicy: None
kind: RouteList
metadata:
  resourceVersion: "62283"
